@@ -1,5 +1,7 @@
 === HEAD
 
+* Fix string quoting on Oracle so it doesn't double backslashes (jeremyevans)
+
 * Alias the count function call in Dataset#count, fixes use on MSSQL (akitaonrails, jeremyevans)
 
 * Allow QualifiedIdentifiers to be qualified, to allow :column.qualify(:table).qualify(:schema) (jeremyevans)
